--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header class="container-fluid">
+	<header class="container-fluid sticky-top">
 		<div class="row">
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
@@ -23,9 +23,12 @@
 					<span class="navbar-toggler-icon"></span>
 				  </button>
 				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav nav-underline me-auto mb-2 mb-lg-0">
 					  <li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">About</a>
 					  </li>
 					  <li class="nav-item">
 						<a class="nav-link" href="#">Skills</a>
@@ -45,9 +48,6 @@
 					  <li class="nav-item">
 						<a class="nav-link" href="#">Contact</a>
 					  </li>
-					  <li class="nav-item">
-						<a class="nav-link disabled" aria-disabled="true">Disabled</a>
-					  </li>
 					</ul>
 					<form class="d-flex" role="search">
 					  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -57,14 +57,12 @@
 				</div>
 			  </nav>
 		</div>
-		<h1 id="site-title">Jen Patchett</h1>
-		<h2 id="site-description">Web Developer & Software Automation Tester</h2>
 	</header>
 
 	<main>
 		<section>
-			<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
-			<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
+			<h1 id="site-title">Jen Patchett</h1>
+			<h2 id="site-description">Web Developer & Software Automation Tester</h2>
 		</section>
 
 		<!-- Carousel of images -->
@@ -94,6 +92,11 @@
 			  <span class="visually-hidden">Next</span>
 			</button>
 		  </div>
+
+		  <section>
+			<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
+			<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
+		  </section>
 
 		  <div class="container">
 			<div class="row">
