--- a/index.html
+++ b/index.html
@@ -14,49 +14,55 @@
 </head>
 
 <body>
-	<header class="container-fluid sticky-top">
-		<div class="row">
-			<nav class="navbar navbar-expand-lg bg-body-tertiary">
-				<div class="container-fluid">
-				  <a class="navbar-brand" href="#">Jen Patchett</a>
-				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				  </button>
-				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav nav-underline me-auto mb-2 mb-lg-0">
-					  <li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-					  </li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#">About</a>
-					  </li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#">Skills</a>
-					  </li>
-					  <li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						  Projects
-						</a>
-						<ul class="dropdown-menu">
-						  <li><a class="dropdown-item" href="#">Project 1</a></li>
-						  <li><a class="dropdown-item" href="#">Project 2</a></li>
-						  <li><a class="dropdown-item" href="#">Project 3</a></li>
-						  <li><hr class="dropdown-divider"></li>
-						  <li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul>
-					  </li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
-					  </li>
-					</ul>
-					<form class="d-flex" role="search">
-					  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-					  <button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
-				  </div>
+	<header>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+			<div class="container-fluid">
+			<a class="navbar-brand" href="#">Jen Patchett</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+				<div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 				</div>
-			  </nav>
-		</div>
+				<div class="offcanvas-body">
+				<ul id="nav-list" class="navbar-nav justify-content-end flex-grow-1 pe-3">
+					<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Skills</a>
+						</li>
+					<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Projects
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="#">Project 1</a></li>
+						<li><a class="dropdown-item" href="#">Project 2</a></li>
+						<li><a class="dropdown-item" href="#">Project 3</a></li>
+						<li>
+						<hr class="dropdown-divider">
+						</li>
+						<li><a class="dropdown-item" href="#">Add something else here</a></li>
+					</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+						</li>
+				</ul>
+				<form class="d-flex mt-3" role="search">
+					<input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+					<button id="search-btn" class="btn btn-outline-success" type="submit">Search</button>
+				</form>
+				</div>
+			</div>
+			</div>
+		</nav>
 	</header>
 
 	<main>
@@ -66,34 +72,34 @@
 		</section>
 
 		<!-- Carousel of images -->
-		<div id="carouselExampleIndicators" class="carousel slide">
-			<div class="carousel-indicators">
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<div id="carouselExampleIndicators" class="carousel slide">
+				<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Two small dogs running along a path">
+				</div>
+				<div class="carousel-item">
+					<img src="https://images.unsplash.com/photo-1597662942557-4087865bf476?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Four puppies - two black and white, two brown and white">
+				</div>
+				<div class="carousel-item">
+					<img src="https://images.unsplash.com/photo-1582068955580-dcc6c0812b21?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHB1cHBpZXN8ZW58MHx8MHx8fDI%3D" class="d-block w-100" alt="Five golden retriever puppies in a farm trailer">
+				</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Two small dogs running along a path">
-			  </div>
-			  <div class="carousel-item">
-				<img src="https://images.unsplash.com/photo-1597662942557-4087865bf476?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Four puppies - two black and white, two brown and white">
-			  </div>
-			  <div class="carousel-item">
-				<img src="https://images.unsplash.com/photo-1582068955580-dcc6c0812b21?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHB1cHBpZXN8ZW58MHx8MHx8fDI%3D" class="d-block w-100" alt="Five golden retriever puppies in a farm trailer">
-			  </div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Next</span>
-			</button>
-		  </div>
 
-		  <section>
+		  <section id="about">
 			<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
 			<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
 		  </section>
@@ -104,7 +110,7 @@
 				<div class="col-12 col-md-6 bg-secondary">Second section</div>
 			</div>
 		</div>
-
+		
 
 		<section>
 			<h2>Skills</h2>
