--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 				<div class="offcanvas-body">
 				<ul id="nav-list" class="navbar-nav justify-content-end flex-grow-1 pe-3">
 					<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
+					<a class="nav-link active" aria-current="page" href="#top">Home</a>
 					</li>
 					<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="#about">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Skills</a>
+						<a class="nav-link" href="#skills">Skills</a>
 						</li>
 					<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					<a class="nav-link dropdown-toggle" href="#projects" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Projects
 					</a>
 					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#">Project 1</a></li>
-						<li><a class="dropdown-item" href="#">Project 2</a></li>
-						<li><a class="dropdown-item" href="#">Project 3</a></li>
+						<li><a class="dropdown-item" href="#project-one">Project 1</a></li>
+						<li><a class="dropdown-item" href="#project-two">Project 2</a></li>
+						<li><a class="dropdown-item" href="#project-three">Project 3</a></li>
 						<li>
 						<hr class="dropdown-divider">
 						</li>
@@ -52,7 +52,7 @@
 					</ul>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#contact">Contact</a>
 						</li>
 				</ul>
 				<form class="d-flex mt-3" role="search">
@@ -112,30 +112,31 @@
 		</div>
 		
 
-		<section>
+		<section id="skills">
 			<h2>Skills</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 
-		<section>
+		<section id="projects">
 			<h2>Projects</h2>
 			<article>
-				<h3>Project 1</h3>
+				<h3 id="project-one">Project 1</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p><a href="#">View Project</a></p>
 			</article>
 			<article>
-				<h3>Project 2</h3>
+				<h3 id="project-two">Project 2</h3>
 				<p>Quis auctor elit sed vulputate. Risus viverra adipiscing at in tellus integer feugiat. Sed turpis tincidunt id aliquet risus feugiat in ante. Risus feugiat in ante metus dictum at tempor. Non odio euismod lacinia at quis risus sed vulputate odio. Tempor orci dapibus ultrices in iaculis nunc. Eget nunc scelerisque viverra mauris. Volutpat maecenas volutpat blandit aliquam etiam erat velit. Magna fringilla urna porttitor rhoncus. Senectus et netus et malesuada fames.</p>
 				<p><a href="#">View Project</a></p>
 			</article>
-			<h3>Project 3</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p><a href="#">View Project</a></p>
+			<article>
+				<h3 id="project-three">Project 3</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p><a href="#">View Project</a></p>
 			</article>
 		</section>
 
-		<section>
+		<section id="contact">
 			<h2>Contact</h2>
 			<p>I'm on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
 		</section>
