--- a/index.html
+++ b/index.html
@@ -144,15 +144,12 @@
 	</main>
 
 	<footer>
-		<div>
-			<p>&copy 2023 Jen Patchett. All rights reserved</p>
-		</div>
+			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 	</footer>
 
 	<!-- Bootstrap script for interactivity -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
-</html>
 
 </body>
 
