--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</nav>
 	</header>
 
-	<main>
+	<main class="main-content">
 		<section>
 			<h1 id="site-title">Jen Patchett</h1>
 			<h2 id="site-description">Web Developer & Software Automation Tester</h2>
@@ -149,7 +149,7 @@
 			  </div>
 			</div>
 		  </div>
-		  
+
 		<section id="skills">
 			<h2>Skills</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -181,7 +181,7 @@
 
 	</main>
 
-	<footer class="container-fluid">
+	<footer>
 			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 	</footer>
 
