--- a/index.html
+++ b/index.html
@@ -176,24 +176,30 @@
 
 		<section id="contact">
 			<h2>Contact</h2>
-			<form id="contact-form">
-				<div class="mb-3">
-				  <label for="inputName" class="form-label">Full name:</label>
-				  <input type="text" class="form-control" id="inputName" aria-labelledby="inputName" required>
-				</div>
-				<div class="mb-3">
-				  <label for="inputEmail" class="form-label">Email address:</label>
-				  <input type="email" class="form-control" id="inputEmail" aria-labelledby="inputEmail" required>
-				</div>
-				<div class="mb-3">
-					<label for="inputMessage" class="form-label">Message:</label>
-					<input type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" required>
-				</div>
-				  <div id="contact-form-submit" class="mb-3 form-check">
+			<form id="contact-form" method="post" action="#">
+				<fieldset class="mb-3">
+				  <label for="first-name" class="form-label">First name:</label>
+				  <input type="text" class="form-control" id="first-name" aria-labelledby="first-name" required>
+				</fieldset>
+				<fieldset class="mb-3">
+					<label for="last-name" class="form-label">Last name:</label>
+					<input type="text" class="form-control" id="last-name" aria-labelledby="last-name" required>
+				  </fieldset>
+				<fieldset class="mb-3">
+				  <label for="email" class="form-label">Email address:</label>
+				  <input type="email" class="form-control" id="email" aria-labelledby="email" required>
+				</fieldset>
+				<fieldset class="mb-3">
+					<label for="inputMessage" class="form-label">Message:
+						<textarea type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" rows="3" cols="70" required></textarea>
+					</label>
+					
+				</fieldset>
+				  <fieldset id="contact-form-submit" class="mb-3 form-check">
 					<input type="checkbox" class="form-check-input" id="form-check-input" required>
 					<label class="form-check-label" for="form-check-input">I agree to the <a href="#">terms and conditions</a></label>
 					<button id="contact-submit-btn" type="submit" class="btn btn-primary float-end">Submit</button>
-				  </div>
+				  </fieldset>
 			  </form>
 		</section>
 
@@ -207,6 +213,4 @@
 	<!-- Bootstrap script for interactivity -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
-
-
 </html>
