Clean up html code with additional comments

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		</header>
 
 		<main class="main-content">
+
+			<!-- Title and Description -->
 			<section>
 				<h1 id="site-title">Jen Patchett</h1>
 				<h2 id="site-description">Web Developer & Software Automation Tester</h2>
@@ -88,11 +90,13 @@
 				</button>
 			</div>
 
+			<!-- About Section -->
 			<section id="about">
 				<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
 				<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
 			</section>
 
+			<!-- Example container with wrap -->
 			<div class="container">
 				<div class="row">
 					<div class="col-12 col-md-6 bg-primary">First section</div>
