--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 					</h3>
 					<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
 						<div class="accordion-body">
-						<strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-						<p><a href="#">View Project</a></p>
+							<p><strong>This is the first project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
+							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+							<p><a href="#">View Project</a></p>
 						</div>
 					</div>
 				</div>
@@ -132,7 +133,8 @@
 					</h3>
 					<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
 						<div class="accordion-body">
-							<strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							<p><strong>This is the second project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
+							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
 					</div>
@@ -144,7 +146,8 @@
 					</h3>
 					<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
 						<div class="accordion-body">
-							<strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+							<p><strong>This is the third project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
+							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
 					</div>
@@ -185,7 +188,7 @@
 
 		<!-- Footer -->
 		<footer>
-			<p>I'm on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
+			<p>Find me on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
 			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 		</footer>
 
