Fix accordion not collapsing on open next: parent ID needs to match data-bs-parent

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 			<section id="about">
 				<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
 				<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
+				<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 			</section>
 
 			<!-- Example container with wrap -->
@@ -108,6 +109,7 @@
 			<section id="skills">
 				<h2>Skills</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. </p>
 			</section>
 
 			<!-- Projects Accordion -->
@@ -118,7 +120,7 @@
 						<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 						Project #1</button>
 					</h3>
-					<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+					<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#projects">
 						<div class="accordion-body">
 							<p><strong>This is the first project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
@@ -131,7 +133,7 @@
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 						Project #2</button>
 					</h3>
-					<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+					<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#projects">
 						<div class="accordion-body">
 							<p><strong>This is the second project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
@@ -144,7 +146,7 @@
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 						Project #3</button>
 					</h3>
-					<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+					<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#projects">
 						<div class="accordion-body">
 							<p><strong>This is the third project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
