--- a/index.html
+++ b/index.html
@@ -157,33 +157,38 @@
 			</section>
 
 			<!-- Contact Form -->
-			<section id="contact">
+			<section id="contact" class="row">
 				<h2>Contact</h2>
-				<form id="contact-form" method="post" action="#">
-					<fieldset class="mb-3">
-						<label for="first-name" class="form-label">First name:</label>
-						<input type="text" class="form-control" id="first-name" aria-labelledby="first-name" required>
-					</fieldset>
-					<fieldset class="mb-3">
-						<label for="last-name" class="form-label">Last name:</label>
-						<input type="text" class="form-control" id="last-name" aria-labelledby="last-name" required>
-					</fieldset>
-					<fieldset class="mb-3">
-						<label for="email" class="form-label">Email address:</label>
-						<input type="email" class="form-control" id="email" aria-labelledby="email" required>
-					</fieldset>
-					<fieldset class="mb-3">
-						<label for="inputMessage" class="form-label">Message:
-							<textarea type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" rows="3" cols="70" required></textarea>
-						</label>
-						
-					</fieldset>
-					<fieldset id="contact-form-submit" class="mb-3 form-check">
-						<input type="checkbox" class="form-check-input" id="form-check-input" required>
-						<label class="form-check-label" for="form-check-input">I agree to the <a href="#">terms and conditions</a></label>
-						<button id="contact-submit-btn" type="submit" class="btn btn-primary float-end">Submit</button>
-					</fieldset>
-				</form>
+					<form id="contact-form" method="post" action="#" class="col-12 col-md-8">
+						<fieldset class="mb-3 contact-form">
+							<label for="first-name" class="form-label">First name:</label>
+							<input type="text" class="form-control" id="first-name" aria-labelledby="first-name" required>
+						</fieldset>
+
+						<fieldset class="mb-3 contact-form">
+							<label for="last-name" class="form-label">Last name:</label>
+							<input type="text" class="form-control" id="last-name" aria-labelledby="last-name" required>
+						</fieldset>
+
+						<fieldset class="mb-3 contact-form">
+							<label for="email" class="form-label">Email address:</label>
+							<input type="email" class="form-control" id="email" aria-labelledby="email" required>
+						</fieldset>
+
+						<fieldset class="mb-3 contact-form">
+							<label for="inputMessage" class="form-label">Message:
+								<textarea type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" rows="3" cols="70" required></textarea>
+							</label>
+						</fieldset>
+
+						<fieldset id="contact-form-submit" class="mb-3 form-check">
+							<input type="checkbox" class="form-check-input" id="form-check-input" required>
+							<label class="form-check-label" for="form-check-input">I agree to the <a href="#">terms and conditions</a></label>
+							<button id="contact-submit-btn" type="submit" class="btn btn-primary float-end">Submit</button>
+						</fieldset>
+					</form>
+
+					<div id="contact-img" class="col-12 col-md-4 bg-secondary">Section for img</div>
 			</section>
 
 		</main>
