--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@
 						<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 						Project #1</button>
 					</h3>
-					<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#projects">
-						<div class="accordion-body">
+					<div id="collapseOne" class="accordion-collapse collapse show row" data-bs-parent="#projects">
+						<div class="accordion-body col-12 col-md-7">
 							<p><strong>This is the first project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
+						<div id="project-one-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
 					</div>
 				</div>
 				<div class="accordion-item">
@@ -133,12 +134,13 @@
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 						Project #2</button>
 					</h3>
-					<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#projects">
-						<div class="accordion-body">
+					<div id="collapseTwo" class="accordion-collapse collapse row" data-bs-parent="#projects">
+						<div class="accordion-body col-12 col-md-7">
 							<p><strong>This is the second project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
+						<div id="project-two-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
 					</div>
 				</div>
 				<div class="accordion-item">
@@ -146,12 +148,13 @@
 						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 						Project #3</button>
 					</h3>
-					<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#projects">
-						<div class="accordion-body">
+					<div id="collapseThree" class="accordion-collapse collapse row" data-bs-parent="#projects">
+						<div class="accordion-body col-12 col-md-7">
 							<p><strong>This is the third project's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
 							<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 							<p><a href="#">View Project</a></p>
 						</div>
+						<div id="project-three-img" class="col-10 col-md-4 bg-secondary project-img">Section for img</div>
 					</div>
 				</div>
 			</section>
