Minor style tweak paragraphs; remove wave emoji in About

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 			<!-- About Section -->
 			<section id="about">
-				<h2><span class="wave">👋</span> Hello, I'm Jen</h2>
+				<h2>Hello, I'm Jen</h2>
 				<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
 				<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 			</section>
