fixed nav bug: add scroll-margin-top to anchors

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</div>
 
 			<!-- About Section -->
-			<section id="about">
+			<section id="about" class="scroll-margin-top">
 				<h2>Hello, I'm Jen</h2>
 				<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
 				<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
@@ -106,14 +106,14 @@
 			</div>
 
 			<!-- Skills Section -->
-			<section id="skills">
+			<section id="skills" class="scroll-margin-top">
 				<h2>Skills</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. </p>
 			</section>
 
 			<!-- Projects Accordion -->
-			<section id="projects" class="accordion">
+			<section id="projects" class="accordion scroll-margin-top">
 				<h2>Projects</h2>
 				<div class="accordion-item">
 					<h3 class="accordion-header">
@@ -160,7 +160,7 @@
 			</section>
 
 			<!-- Contact Form -->
-			<section id="contact" class="row">
+			<section id="contact" class="row scroll-margin-top">
 				<h2>Contact</h2>
 					<form id="contact-form" method="post" action="#" class="col-12 col-md-7">
 						<fieldset class="mb-3 contact-form">
