--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		<header>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 				<div class="container-fluid">
-				<a class="navbar-brand" href="#">Jen Patchett</a>
+				<a class="navbar-brand" href="#">
+					<img src="./images/profile-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
+      				Jen Patchett
+				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
