Add contact section photo & adjust styling

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			<!-- Contact Form -->
 			<section id="contact" class="row scroll-margin-top">
 				<h2>Contact</h2>
-					<form id="contact-form" method="post" action="#" class="col-12 col-md-7">
+					<form id="contact-form" method="post" action="#" class="col-12 col-lg-8">
 						<fieldset class="mb-3 contact-form">
 							<label for="first-name" class="form-label">First name:</label>
 							<input type="text" class="form-control" id="first-name" aria-labelledby="first-name" required>
@@ -183,18 +183,21 @@
 
 						<fieldset class="mb-3 contact-form">
 							<label for="inputMessage" class="form-label">Message:
-								<textarea type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" rows="3" cols="70" required></textarea>
+								<textarea type="text" class="form-control" id="inputMessage" aria-labelledby="inputMessage" rows="3" cols="80" required></textarea>
 							</label>
 						</fieldset>
 
 						<fieldset id="contact-form-submit" class="mb-3 form-check">
 							<input type="checkbox" class="form-check-input" id="form-check-input" required>
-							<label class="form-check-label" for="form-check-input">I agree to the <a href="#">terms and conditions</a></label>
+							<label class="form-check-label" for="form-check-input">I agree to the <a href="#">terms</a></label>
 							<button id="contact-submit-btn" type="submit" class="btn btn-primary float-end">Submit</button>
 						</fieldset>
 					</form>
 
-					<div id="contact-img" class="col-10 col-md-4 bg-secondary">Section for img</div>
+					<div id="contact-img-section" class="col-12 col-lg-4">
+						<img src="./images/profile-img-contact.jpeg" alt="Photo of Jen Patchett" class="profile-img">
+					</div>
+					
 			</section>
 
 		</main>
