Combine About and Carousel into one responsive row

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 
 	<body>
+		<!-- Nav Menu -->
 		<header>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 				<div class="container-fluid mx-2 mx-xl-4">
@@ -65,48 +66,48 @@
 				<h2 id="site-description">Web Developer & Software Automation Tester</h2>
 			</section>
 
-			<!-- Carousel of images -->
-			<div id="carouselExampleIndicators" class="carousel slide">
-				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Two small dogs running along a path">
-					</div>
-					<div class="carousel-item">
-						<img src="https://images.unsplash.com/photo-1597662942557-4087865bf476?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Four puppies - two black and white, two brown and white">
-					</div>
-					<div class="carousel-item">
-						<img src="https://images.unsplash.com/photo-1582068955580-dcc6c0812b21?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHB1cHBpZXN8ZW58MHx8MHx8fDI%3D" class="d-block w-100" alt="Five golden retriever puppies in a farm trailer">
-					</div>
-				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
+			<!-- About Section with Carousel -->
+			<section id="about" class="row scroll-margin-top">
+				<!-- <div class="row"> -->
 
-			<!-- About Section -->
-			<section id="about" class="scroll-margin-top">
-				<h2>Hello, I'm Jen</h2>
-				<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
-				<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+					<!-- About -->
+					<div class="col-12 col-md-6">
+						<h2>Hello, I'm Jen</h2>
+						<p>I'm a web developer and former back-end software automation tester at Sky UK, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
+						<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+					</div>
+
+					<!-- Carousel -->
+					<div id="img-carousel-about" class="col-12 col-md-6">
+						<div id="carouselExampleIndicators" class="carousel slide">
+							<div class="carousel-indicators">
+								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+							</div>
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Two small dogs running along a path">
+								</div>
+								<div class="carousel-item">
+									<img src="https://images.unsplash.com/photo-1597662942557-4087865bf476?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Four puppies - two black and white, two brown and white">
+								</div>
+								<div class="carousel-item">
+									<img src="https://images.unsplash.com/photo-1582068955580-dcc6c0812b21?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHB1cHBpZXN8ZW58MHx8MHx8fDI%3D" class="d-block w-100" alt="Five golden retriever puppies in a farm trailer">
+								</div>
+							</div>
+							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="visually-hidden">Next</span>
+							</button>
+						</div>
+					</div>
+				<!-- </div> -->
 			</section>
-
-			<!-- Example container with wrap -->
-			<div class="container">
-				<div class="row">
-					<div class="col-12 col-md-6 bg-primary">First section</div>
-					<div class="col-12 col-md-6 bg-secondary">Second section</div>
-				</div>
-			</div>
 
 			<!-- Skills Section -->
 			<section id="skills" class="scroll-margin-top">
@@ -162,7 +163,7 @@
 				</div>
 			</section>
 
-			<!-- Contact Form -->
+			<!-- Contact Section -->
 			<section id="contact" class="row scroll-margin-top">
 				<h2>Contact</h2>
 					<form id="contact-form" method="post" action="#" class="col-12 col-lg-8">
