Add responsive styling to skills Cards

--- a/index.html
+++ b/index.html
@@ -110,11 +110,10 @@
 			</section>
 
 			<!-- Skills Section -->
-			<section id="skills" class="scroll-margin-top">
-				<h2>My Skills</h2>
-				<div class="row" style="margin: 0;">
-
-					<div class="card col-12 col-md-4">
+			<section id="skills" class="container-fluid scroll-margin-top">
+				<h2 class="skills-heading">My Skills</h2>
+				<div class="row skills-cards-container">
+					<div class="card skills-card col-12 col-md-4">
 						<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
 						<div class="card-body">
 						<h5 class="card-title">Card title</h5>
@@ -123,7 +122,7 @@
 						</div>
 					</div>
 
-					<div class="card col-12 col-md-4">
+					<div class="card skills-card col-12 col-md-4">
 						<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
 						<div class="card-body">
 						<h5 class="card-title">Card title</h5>
@@ -132,7 +131,7 @@
 						</div>
 					</div>
 
-					<div class="card col-12 col-md-4">
+					<div class="card skills-card col-12 col-md-4">
 						<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
 						<div class="card-body">
 						<h5 class="card-title">Card title</h5>
