Add border-radius & sizing to carousel

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 
 					<!-- Carousel -->
-					<div id="img-carousel-about" class="col-12 col-md-6">
+					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-5">
 						<div id="carouselExampleIndicators" class="carousel slide">
 							<div class="carousel-indicators">
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
