Reduce margin-top on carousel to align with h2

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 					<div class="col-12 col-md-6">
 						<h2>Hello, I'm Jen</h2>
 						<p>I'm a web developer and former software automation tester at Sky UK Ltd, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
-						<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+						<p>Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
 					</div>
 
 					<!-- Carousel -->
-					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-5">
+					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-2">
 						<div id="carouselExampleIndicators" class="carousel slide">
 							<div class="carousel-indicators">
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
