Tweak margins, padding

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 		<main class="main-content">
 
 			<!-- Title and Description -->
-			<section>
-				<h1 id="site-title">Jen Patchett</h1>
-				<h2 id="site-description">Web Developer & Software Automation Tester</h2>
+			<section id="heading">
+				<h1 id="main-title" class="mt-sm-2">Jen Patchett</h1>
+				<h2 id="main-description">Web Developer & Software Automation Tester</h2>
 			</section>
 
 			<!-- About Section with Carousel -->
@@ -78,7 +78,7 @@
 					</div>
 
 					<!-- Carousel -->
-					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-2">
+					<div id="img-carousel-about" class="col-12 col-md-6 mt-md-3">
 						<div id="carouselExampleIndicators" class="carousel slide">
 							<div class="carousel-indicators">
 								<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -231,7 +231,7 @@
 
 		<!-- Footer -->
 		<footer>
-			<p>Find me on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
+			<p class="social-links">Find me on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
 			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 		</footer>
 
