Replace skills cards with card group

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			</section>
 
 			<!-- Skills Section -->
-			<section id="skills" class="container-fluid scroll-margin-top">
+			<!-- <section class="container-fluid scroll-margin-top">
 				<h2 class="skills-heading">My Skills</h2>
 				<div class="row skills-cards-container">
 					<div class="card skills-card col-12 col-md-4">
@@ -140,7 +140,40 @@
 						</div>
 					</div>
 				</div>
+			</section> -->
+
+			<!-- Skills Section -->
+			<section id="skills" class="scroll-margin-top">
+				<h2>My Skills</h2>
+			
+				<div class="card-group">
+					<div class="card">
+					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+					</div>
+					</div>
+					<div class="card">
+					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+					</div>
+					</div>
+					<div class="card">
+					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+					</div>
+					</div>
+				</div>
 			</section>
+
 
 			<!-- Projects Accordion -->
 			<section id="projects" class="accordion scroll-margin-top">
