Add social images to Footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<h2 id="main-description">Web Developer & Software Automation Tester</h2>
 			</section>
 
-			
+
 			<!-- About Section with Carousel -->
 			<section id="about" class="row scroll-margin-top">
 
@@ -232,7 +232,8 @@
 
 		<!-- Footer -->
 		<footer>
-			<p class="social-links">Find me on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
+			<a href="https://github.com/JenPatchett" target="_blank"><img src="./images/github.svg" class="social-logo" alt="GitHub logo"></a>
+			<a href="https://www.linkedin.com/in/jenpatchett/" target="_blank"><img src="./images/linkedin.svg" class="social-logo" alt="LinkedIn logo"></a>
 			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 		</footer>
 
