Hide img in Contact section on xs to md screens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</ul>
 					<form class="d-flex mt-3" role="search">
 						<input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button id="search-btn" class="btn btn-outline-success" type="submit">Search</button>
+						<button id="search-btn" class="btn" type="submit"><img src="./images/search.svg" alt="search button"> </button>
 					</form>
 					</div>
 				</div>
@@ -221,7 +221,8 @@
 						</fieldset>
 					</form>
 
-					<div id="contact-img-section" class="col-12 col-lg-4">
+					<!-- Section with Profile Image - Hidden on xs to md Screens -->
+					<div id="contact-img-section" class="col-12 col-lg-4 d-none d-lg-block">
 						<img src="./images/profile-img-contact.jpeg" alt="Photo of Jen Patchett" class="profile-img">
 					</div>
 					
