Update placeholder images

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 							</div>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Two small dogs running along a path">
+									<img src="./images/coding.jpg" class="d-block w-100" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
 								</div>
 								<div class="carousel-item">
-									<img src="https://images.unsplash.com/photo-1597662942557-4087865bf476?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="d-block w-100" alt="Four puppies - two black and white, two brown and white">
+									<img src="./images/computer-screens.png" class="d-block w-100" alt="Two computer screens on a plain blue background">
 								</div>
 								<div class="carousel-item">
-									<img src="https://images.unsplash.com/photo-1582068955580-dcc6c0812b21?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHB1cHBpZXN8ZW58MHx8MHx8fDI%3D" class="d-block w-100" alt="Five golden retriever puppies in a farm trailer">
+									<img src="./images/macbook-code.jpg" class="d-block w-100" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background">
 								</div>
 							</div>
 							<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -115,7 +115,7 @@
 			
 				<div class="card-group">
 					<div class="card">
-					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<img src="./images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -123,7 +123,7 @@
 					</div>
 					
 					<div class="card">
-					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<img src="./images/computer-screens.png" class="card-img-top" alt="Two computer screens on a plain blue background">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -131,7 +131,7 @@
 					</div>
 
 					<div class="card">
-					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
+					<img src="./images/coding.jpg" class="card-img-top" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
